--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,17 +24,17 @@ julia:1.4:
   tags:
     - nvidia
 
-julia:1.4-debug:
-  extends:
-    - .julia:source
-    - .test
-  tags:
-    - nvidia
-    - sm_70
-  variables:
-    CI_CLONE_ARGS: '-b v1.4.0'
-    CI_BUILD_ARGS: 'BINARYBUILDER_LLVM_ASSERTS=1 debug'
-  allow_failure: true
+# julia:1.4-debug:
+#   extends:
+#     - .julia:source
+#     - .test
+#   tags:
+#     - nvidia
+#     - sm_70
+#   variables:
+#     CI_CLONE_ARGS: '-b v1.4.0'
+#     CI_BUILD_ARGS: 'BINARYBUILDER_LLVM_ASSERTS=1 debug'
+#   allow_failure: true
 
 julia:1.5:
   extends:
