--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,7 @@ cuda:10.1:
   tags:
     - nvidia
     - latest
+    - cuda_10.1
 
 cuda:10.0:
   extends:
@@ -80,6 +81,7 @@ cuda:10.0:
     JULIA_CUDA_USE_BINARYBUILDER: 'true'
   tags:
     - nvidia
+    - cuda_10.0
 
 cuda:9.2:
   extends:
@@ -91,6 +93,7 @@ cuda:9.2:
     JULIA_CUDA_USE_BINARYBUILDER: 'true'
   tags:
     - nvidia
+    - cuda_9.2
 
 # NOTE: CUDA 9.0 is broken
 
