--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -188,3 +188,52 @@ pages:
     - public
   only:
     - master
+
+
+# benchmarks
+
+.benchmark:
+  stage: post
+  extends:
+    - .julia:1.4
+  tags:
+    - nvidia-benchmark
+  variables:
+    JULIA_LOAD_PATH: "$CI_PROJECT_DIR:$CI_PROJECT_DIR/perf::"
+    CODESPEED_ENVIRONMENT: "$CI_RUNNER_DESCRIPTION"
+    CODESPEED_PROJECT: "$CI_PROJECT_NAME"
+    CODESPEED_BRANCH: "$CI_COMMIT_REF_NAME"
+    CODESPEED_COMMIT: "$CI_COMMIT_SHA"
+  script:
+    - julia --project --color=yes -e 'using Pkg;
+                                      Pkg.instantiate()'
+    - julia --project=perf/ --color=yes -e 'using Pkg;
+                                            Pkg.instantiate()'
+    - julia --project=perf/ --color=yes perf/runbenchmarks.jl
+
+benchmark:1.3:
+  extends:
+    - .julia:1.3
+    - .benchmark
+  tags:
+    - nvidia-benchmark
+  variables:
+    CODESPEED_EXECUTABLE: "Julia 1.3"
+
+benchmark:1.4:
+  extends:
+    - .julia:1.4
+    - .benchmark
+  tags:
+    - nvidia-benchmark
+  variables:
+    CODESPEED_EXECUTABLE: "Julia 1.4"
+
+benchmark:1.5:
+  extends:
+    - .julia:1.5
+    - .benchmark
+  tags:
+    - nvidia-benchmark
+  variables:
+    CODESPEED_EXECUTABLE: "Julia 1.5"
