--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -219,6 +219,7 @@ benchmark:1.3:
     - nvidia-benchmark
   variables:
     CODESPEED_EXECUTABLE: "Julia 1.3"
+  allow_failure: true
 
 benchmark:1.4:
   extends:
@@ -228,6 +229,7 @@ benchmark:1.4:
     - nvidia-benchmark
   variables:
     CODESPEED_EXECUTABLE: "Julia 1.4"
+  allow_failure: true
 
 benchmark:1.5:
   extends:
@@ -237,3 +239,4 @@ benchmark:1.5:
     - nvidia-benchmark
   variables:
     CODESPEED_EXECUTABLE: "Julia 1.5"
+  allow_failure: true
