Default to Julia 1.5, add CUDA 10.2, and warn about skipping tests if not allowed to.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,13 +48,26 @@ julia:1.5:
 #       https://developer.nvidia.com/rdp/cudnn-archive
 
 # the "primary" target, where we require a new GPU to make sure all tests are run
-cuda:10.1:
+cuda:10.2:
   extends:
-    - .julia:1.4
+    - .julia:1.5
     - .test
   image: ubuntu:bionic
   variables:
     CI_THOROUGH: 'true'
+    JULIA_CUDA_VERSION: '10.2'
+    JULIA_CUDA_USE_BINARYBUILDER: 'true'
+  tags:
+    - nvidia
+    - latest
+    - cuda_10.2
+
+cuda:10.1:
+  extends:
+    - .julia:1.5
+    - .test
+  image: ubuntu:bionic
+  variables:
     JULIA_CUDA_VERSION: '10.1'
     JULIA_CUDA_USE_BINARYBUILDER: 'true'
   tags:
@@ -64,7 +77,7 @@ cuda:10.1:
 
 cuda:10.0:
   extends:
-    - .julia:1.4
+    - .julia:1.5
     - .test
   image: ubuntu:bionic
   variables:
@@ -76,7 +89,7 @@ cuda:10.0:
 
 cuda:9.2:
   extends:
-    - .julia:1.4
+    - .julia:1.5
     - .test
   image: ubuntu:bionic
   variables:
@@ -90,7 +103,7 @@ cuda:9.2:
 
 cuda:none:
   extends:
-    - .julia:1.4
+    - .julia:1.5
     - .test
   variables:
     NVIDIA_VISIBLE_DEVICES: ''
@@ -160,12 +173,12 @@ debug:
 
 coverage:
   extends:
-    - .julia:1.4
+    - .julia:1.5
     - .coverage
 
 documentation:
   extends:
-    - .julia:1.4
+    - .julia:1.5
     - .documentation
   tags:
     - nvidia
@@ -186,7 +199,7 @@ pages:
 .benchmark:
   stage: post
   extends:
-    - .julia:1.4
+    - .julia:1.5
   tags:
     - nvidia-benchmark
   variables:
