Compatibility with LLVM.jl 2.0 and GPUCompiler 0.5

--- a/Project.toml
+++ b/Project.toml
@@ -34,8 +34,8 @@ CEnum = "0.2, 0.3, 0.4"
 DataStructures = "0.17"
 ExprTools = "0.1"
 GPUArrays = "4.0"
-GPUCompiler = "0.4"
-LLVM = "1.5.2"
+GPUCompiler = "0.4, 0.5"
+LLVM = "1.5.2, 2"
 MacroTools = "0.5"
 NNlib = "0.6.5, 0.7"
 Reexport = "0.2"
