--- a/Project.toml
+++ b/Project.toml
@@ -34,14 +34,14 @@ CEnum = "0.2, 0.3, 0.4"
 DataStructures = "0.17"
 ExprTools = "0.1"
 GPUArrays = "5.0"
-GPUCompiler = "0.4, 0.5"
+GPUCompiler = "0.4, 0.5, 0.6"
 LLVM = "1.5.2, 2"
 MacroTools = "0.5"
 NNlib = "0.6.5, 0.7"
 Reexport = "0.2"
 Requires = "0.5, 1.0"
 TimerOutputs = "0.5"
-julia = "1.4"
+julia = "1.3"
 
 [extras]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
