--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,19 @@ julia:1.5:
 # NOTE: we make sure to run all tests on CUDA versions that have CUDNN & CUTENSOR
 #       by setting the CI_THOROUGH environment variable, and using a recent GPU.
 
+cuda:11.1:
+  extends:
+    - .julia:1.5
+    - .test
+  image: ubuntu:bionic
+  variables:
+    JULIA_CUDA_VERSION: '11.1'
+    JULIA_CUDA_USE_BINARYBUILDER: 'true'
+  tags:
+    - nvidia
+    - latest
+    - cuda_11.1
+
 cuda:11.0:
   extends:
     - .julia:1.5
