Ignore some additional folders. [ci skip]

--- a/codecov.yml
+++ b/codecov.yml
@@ -2,6 +2,9 @@ coverage:
   ignore:
     - "lib/*/lib*.jl"
     - "src/device"
+    - "res/"
+    - "doc/"
+    - "perf/"
   status:
     patch: false
     project: false
