--- a/Project.toml
+++ b/Project.toml
@@ -49,10 +49,11 @@ julia = "1.5"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "FFTW", "ForwardDiff", "FillArrays", "Distributed", "REPL", "Dates"]
+test = ["Test", "FFTW", "ForwardDiff", "FillArrays", "Distributed", "REPL", "Dates", "Interpolations"]
