--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ AbstractFFTs = "621f4979-c628-5d54-868e-fcf4e3e8185c"
 Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 BFloat16s = "ab4f0b2a-ad5b-11e8-123f-65d77653426b"
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
+Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 ExprTools = "e2ba6199-217a-4e67-a87a-7c52f15ade04"
 GPUArrays = "0c68f7d7-f131-5f86-a1c3-88cf8149b2d7"
@@ -31,6 +32,7 @@ AbstractFFTs = "0.4, 0.5"
 Adapt = "2.2"
 BFloat16s = "0.1"
 CEnum = "0.2, 0.3, 0.4"
+Compat = "3.9"
 DataStructures = "0.17, 0.18"
 ExprTools = "0.1"
 GPUArrays = "6.1.0"
