--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -15,7 +15,7 @@ steps:
     agents:
       queue: "juliagpu"
       cuda: "*"
-    if: build.message !~ /skip tests/
+    if: build.message !~ /\[skip tests\]/
 
   - wait  # smoke test: don't kick off a large number of tests if they'd all just fail
 
@@ -34,7 +34,7 @@ steps:
     agents:
       queue: "juliagpu"
       cuda: "*"
-    if: build.message !~ /skip tests/
+    if: build.message !~ /\[skip tests\]/
 
 
     # CUDA versions
@@ -64,7 +64,7 @@ steps:
       CI_THOROUGH: 'true'
       JULIA_CUDA_VERSION: '11.1'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /skip tests/
+    if: build.message !~ /\[skip tests\]/
 
   - label: "CUDA 11.0"
     plugins:
@@ -85,7 +85,7 @@ steps:
       CI_THOROUGH: 'true'
       JULIA_CUDA_VERSION: '11.0'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /skip tests/
+    if: build.message !~ /\[skip tests\]/
 
   - label: "CUDA 10.2"
     plugins:
@@ -106,7 +106,7 @@ steps:
       CI_THOROUGH: 'true'
       JULIA_CUDA_VERSION: '10.2'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /skip tests/
+    if: build.message !~ /\[skip tests\]/
 
   - label: "CUDA 10.1"
     plugins:
@@ -127,7 +127,7 @@ steps:
       CI_THOROUGH: 'true'
       JULIA_CUDA_VERSION: '10.1'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /skip tests/
+    if: build.message !~ /\[skip tests\]/
 
 
    # special tests
@@ -148,7 +148,7 @@ steps:
       cuda: "*"
     env:
       JULIA_CUDA_MEMORY_POOL: 'none'
-    if: build.message !~ /skip tests/
+    if: build.message !~ /\[skip tests\]/
 
   - label: "Simple memory pool"
     plugins:
@@ -166,7 +166,7 @@ steps:
       cuda: "*"
     env:
       JULIA_CUDA_MEMORY_POOL: 'simple'
-    if: build.message !~ /skip tests/
+    if: build.message !~ /\[skip tests\]/
 
   - label: "Split memory pool"
     plugins:
@@ -184,7 +184,7 @@ steps:
       cuda: "*"
     env:
       JULIA_CUDA_MEMORY_POOL: 'split'
-    if: build.message !~ /skip tests/
+    if: build.message !~ /\[skip tests\]/
 
 
   # other tasks
@@ -232,7 +232,7 @@ steps:
     agents:
       queue: "juliagpu"
       cuda: "*"
-    if: build.message !~ /skip docs/
+    if: build.message !~ /\[skip docs\]/
 
 
 
