--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,5 @@
 steps:
-  # Julia versions
-
-  - label: "Julia 1.5"
+  - label: "ARM"
     plugins:
       - JuliaCI/julia#v0.2:
           version: 1.5
@@ -13,226 +11,9 @@ steps:
             - lib
             - examples
     agents:
-      queue: "juliagpu"
+      queue: "juliagpu_arm"
       cuda: "*"
     if: build.message !~ /\[skip tests\]/
-
-  - wait  # smoke test: don't kick off a large number of tests if they'd all just fail
-
-  - label: "Julia 1.5 (debug)"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-      - JuliaCI/julia-test#v0.2:
-          julia_args: "-g2"
-      - JuliaCI/julia-coverage#v0.2:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    if: build.message !~ /\[skip tests\]/
-
-
-    # CUDA versions
-
-    # NOTE: we support those CUDA versions for which the latest cuDNN is available
-    #       https://developer.nvidia.com/rdp/cudnn-archive
-
-    # NOTE: we make sure to run all tests on CUDA versions that have CUDNN & CUTENSOR
-    #       by setting the CI_THOROUGH environment variable, and using a recent GPU.
-
-  - label: "CUDA 11.1"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-      - JuliaCI/julia-test#v0.2: ~
-      - JuliaCI/julia-coverage#v0.2:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "11.1"
-      cap: "recent"
-    env:
-      CI_THOROUGH: 'true'
-      JULIA_CUDA_VERSION: '11.1'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
-
-  - label: "CUDA 11.0"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-      - JuliaCI/julia-test#v0.2: ~
-      - JuliaCI/julia-coverage#v0.2:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "11.0"
-      cap: "recent"
-    env:
-      CI_THOROUGH: 'true'
-      JULIA_CUDA_VERSION: '11.0'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
-
-  - label: "CUDA 10.2"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-      - JuliaCI/julia-test#v0.2: ~
-      - JuliaCI/julia-coverage#v0.2:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "10.2"
-      cap: "recent"
-    env:
-      CI_THOROUGH: 'true'
-      JULIA_CUDA_VERSION: '10.2'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
-
-  - label: "CUDA 10.1"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-      - JuliaCI/julia-test#v0.2: ~
-      - JuliaCI/julia-coverage#v0.2:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "10.1"
-      cap: "recent"
-    env:
-      CI_THOROUGH: 'true'
-      JULIA_CUDA_VERSION: '10.1'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
-
-
-   # special tests
-
-  - label: "No memory pool"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-      - JuliaCI/julia-test#v0.2: ~
-      - JuliaCI/julia-coverage#v0.2:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    env:
-      JULIA_CUDA_MEMORY_POOL: 'none'
-    if: build.message !~ /\[skip tests\]/
-
-  - label: "Simple memory pool"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-      - JuliaCI/julia-test#v0.2: ~
-      - JuliaCI/julia-coverage#v0.2:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    env:
-      JULIA_CUDA_MEMORY_POOL: 'simple'
-    if: build.message !~ /\[skip tests\]/
-
-  - label: "Split memory pool"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-      - JuliaCI/julia-test#v0.2: ~
-      - JuliaCI/julia-coverage#v0.2:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    env:
-      JULIA_CUDA_MEMORY_POOL: 'split'
-    if: build.message !~ /\[skip tests\]/
-
-
-  # other tasks
-
-  - wait
-
-  - label: "Benchmarks"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-    env:
-      CODESPEED_PROJECT: "$BUILDKITE_PIPELINE_NAME"
-      CODESPEED_BRANCH: "$BUILDKITE_BRANCH"
-      CODESPEED_COMMIT: "$BUILDKITE_COMMIT"
-      CODESPEED_EXECUTABLE: "Julia 1.5"
-    command: |
-      julia --project=perf/ -e '
-        ENV["CODESPEED_ENVIRONMENT"] = ENV["BUILDKITE_AGENT_NAME"]
-
-        println("--- :julia: Instantiating project")
-        using Pkg
-        Pkg.instantiate()
-        Pkg.develop(PackageSpec(path=pwd()))
-
-        println("+++ :julia: Benchmarking")
-        include("perf/runbenchmarks.jl")'
-    agents:
-      queue: "benchmark"
-      cuda: "*"
-    if: build.message !~ /skip benchmarks/
-
-  - label: "Documentation"
-    plugins:
-      - JuliaCI/julia#v0.2:
-          version: 1.5
-    command: |
-      julia --project=docs/ -e '
-        println("--- :julia: Instantiating project")
-        using Pkg
-        Pkg.instantiate()
-        Pkg.develop(PackageSpec(path=pwd()))
-
-        println("+++ :julia: Building documentation")
-        include("docs/make.jl")'
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    if: build.message !~ /\[skip docs\]/
 
 
 
