--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ GPUArrays = "6.1.0"
 GPUCompiler = "0.8.1"
 LLVM = "3"
 MacroTools = "0.5"
-NNlib = "0.6.5, 0.7"
+NNlib = "0.7.7"
 Reexport = "0.2"
 Requires = "0.5, 1.0"
 TimerOutputs = "0.5"
