--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ NNlib = "0.7.7"
 Reexport = "0.2"
 Requires = "0.5, 1.0"
 TimerOutputs = "0.5"
-julia = "1.5"
+julia = "~1.5"
 
 [extras]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
