--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ GPUCompiler = "0.9"
 LLVM = "3"
 MacroTools = "0.5"
 NNlib = "0.7.7"
-Reexport = "0.2"
+Reexport = "0.2, 1.0"
 Requires = "0.5, 1.0"
 TimerOutputs = "0.5"
 julia = "1.6"
