--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -36,7 +36,7 @@ steps:
             - examples
     agents:
       queue: "juliagpu"
-      cuda: "11.1"    # older versions of CUDA have issues
+      cuda: "11.2"    # older versions of CUDA have issues
       cap: "recent"   # test as much as possible
     if: build.message !~ /\[skip tests\]/
     timeout_in_minutes: 120
@@ -54,7 +54,8 @@ steps:
     plugins:
       - JuliaCI/julia#v1:
           version: 1.6-nightly
-      - JuliaCI/julia-test#v1: ~
+      - JuliaCI/julia-test#v1:
+          test_args: "--thorough"
       - JuliaCI/julia-coverage#v1:
           codecov: true
           dirs:
@@ -64,6 +65,7 @@ steps:
     agents:
       queue: "juliagpu"
       cuda: "11.2"
+      cap: "recent"
     env:
       JULIA_CUDA_VERSION: '11.2'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
