--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -27,7 +27,7 @@ steps:
           version: 1.6-nightly
       - JuliaCI/julia-test#v1:
           julia_args: "-g2"
-          test_args: "--memcheck"
+          test_args: "--sanitize"
       - JuliaCI/julia-coverage#v1:
           codecov: true
           dirs:
@@ -38,8 +38,6 @@ steps:
       queue: "juliagpu"
       cuda: "11.2"                    # older versions of CUDA have issues
       cap: "recent"                   # test as much as possible
-    env:
-      JULIA_CUDA_MEMORY_POOL: 'none'  # CUDA's memory pool requires compute-sanitizer
     if: build.message !~ /\[skip tests\]/
     timeout_in_minutes: 120
 
