--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -38,6 +38,9 @@ steps:
       queue: "juliagpu"
       cuda: "11.2"                    # older versions of CUDA have issues
       cap: "recent"                   # test as much as possible
+    env:
+      JULIA_CUDA_VERSION: '11.2'
+      JULIA_CUDA_USE_BINARYBUILDER: 'true'
     if: build.message !~ /\[skip tests\]/
     timeout_in_minutes: 120
 
