--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -27,7 +27,7 @@ steps:
           version: 1.6-nightly
       - JuliaCI/julia-test#v1:
           julia_args: "-g2"
-          test_args: "--sanitize"
+          test_args: "--sanitize --quickfail"
       - JuliaCI/julia-coverage#v1:
           codecov: true
           dirs:
@@ -39,6 +39,7 @@ steps:
       cuda: "11.2"                    # older versions of CUDA have issues
       cap: "recent"                   # test as much as possible
     env:
+      JULIA_CUDA_MEMORY_POOL: 'none'  # compute-sanitizer uses a lot of memory, so we need device_reset!
       JULIA_CUDA_VERSION: '11.2'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
     if: build.message !~ /\[skip tests\]/
