Always benchmark, even if CI fails. [skip ci]

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -189,31 +189,9 @@ steps:
 
   # other tasks
 
-  - wait
-
-  # benchmarks outside of the master branch don't submit their results,
-  # so they can run on any system in the juliagpu queue.
-  - label: "Benchmarks (dry run)"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6-nightly
-    command: |
-      julia --project -e '
-        println("--- :julia: Instantiating project")
-        using Pkg
-        Pkg.instantiate()
-        Pkg.activate("perf")
-        Pkg.instantiate()
-        push!(LOAD_PATH, @__DIR__)
-
-        println("+++ :julia: Benchmarking")
-        include("perf/runbenchmarks.jl")'
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    if: build.message !~ /\[skip benchmarks\]/ &&
-        build.branch !~ /^master$$/
-    timeout_in_minutes: 30
+  # we want to benchmark every commit on the master branch, even if it failed CI
+  - wait: ~
+    continue_on_failure: true
 
   # if we will submit results, use the benchmark queue so that we will
   # be running on the same system each time
@@ -244,6 +222,32 @@ steps:
       cuda: "*"
     if: build.message !~ /\[skip benchmarks\]/ &&
         build.branch =~ /^master$$/
+    timeout_in_minutes: 30
+
+  - wait
+
+  # benchmarks outside of the master branch don't submit their results,
+  # so they can run on any system in the juliagpu queue.
+  - label: "Benchmarks (dry run)"
+    plugins:
+      - JuliaCI/julia#v1:
+          version: 1.6-nightly
+    command: |
+      julia --project -e '
+        println("--- :julia: Instantiating project")
+        using Pkg
+        Pkg.instantiate()
+        Pkg.activate("perf")
+        Pkg.instantiate()
+        push!(LOAD_PATH, @__DIR__)
+
+        println("+++ :julia: Benchmarking")
+        include("perf/runbenchmarks.jl")'
+    agents:
+      queue: "juliagpu"
+      cuda: "*"
+    if: build.message !~ /\[skip benchmarks\]/ &&
+        build.branch !~ /^master$$/
     timeout_in_minutes: 30
 
   - label: "Documentation"
