Always run benchmarks on the benchmark bot.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -193,8 +193,6 @@ steps:
   - wait: ~
     continue_on_failure: true
 
-  # if we will submit results, use the benchmark queue so that we will
-  # be running on the same system each time
   - label: "Benchmarks"
     plugins:
       - JuliaCI/julia#v1:
@@ -220,35 +218,10 @@ steps:
     agents:
       queue: "benchmark"
       cuda: "*"
-    if: build.message !~ /\[skip benchmarks\]/ &&
-        build.branch =~ /^master$$/
+    if: build.message !~ /\[skip benchmarks\]/
     timeout_in_minutes: 30
 
   - wait
-
-  # benchmarks outside of the master branch don't submit their results,
-  # so they can run on any system in the juliagpu queue.
-  - label: "Benchmarks (dry run)"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6-nightly
-    command: |
-      julia --project -e '
-        println("--- :julia: Instantiating project")
-        using Pkg
-        Pkg.instantiate()
-        Pkg.activate("perf")
-        Pkg.instantiate()
-        push!(LOAD_PATH, @__DIR__)
-
-        println("+++ :julia: Benchmarking")
-        include("perf/runbenchmarks.jl")'
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    if: build.message !~ /\[skip benchmarks\]/ &&
-        build.branch !~ /^master$$/
-    timeout_in_minutes: 30
 
   - label: "Documentation"
     plugins:
