--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,7 +4,7 @@ steps:
   - label: "Julia 1.6"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
       - JuliaCI/julia-test#v1:
           test_args: "--quickfail"
       - JuliaCI/julia-coverage#v1:
@@ -24,7 +24,7 @@ steps:
   - label: "Julia 1.6 (debug)"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
       - JuliaCI/julia-test#v1:
           julia_args: "-g2"
           test_args: "--sanitize --quickfail --jobs=1"
@@ -57,7 +57,7 @@ steps:
   - label: "CUDA 11.2"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
       - JuliaCI/julia-test#v1:
           test_args: "--thorough"
       - JuliaCI/julia-coverage#v1:
@@ -79,7 +79,7 @@ steps:
   - label: "CUDA 11.1"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
       - JuliaCI/julia-test#v1:
           test_args: "--thorough"
       - JuliaCI/julia-coverage#v1:
@@ -101,7 +101,7 @@ steps:
   - label: "CUDA 11.0"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
       - JuliaCI/julia-test#v1:
           test_args: "--thorough"
       - JuliaCI/julia-coverage#v1:
@@ -123,7 +123,7 @@ steps:
   - label: "CUDA 10.2"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
       - JuliaCI/julia-test#v1:
           test_args: "--thorough"
       - JuliaCI/julia-coverage#v1:
@@ -145,7 +145,7 @@ steps:
   - label: "CUDA 10.1"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
       - JuliaCI/julia-test#v1:
           test_args: "--thorough"
       - JuliaCI/julia-coverage#v1:
@@ -170,7 +170,7 @@ steps:
   - label: "Split memory pool"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
       - JuliaCI/julia-test#v1: ~
       - JuliaCI/julia-coverage#v1:
           codecov: true
@@ -196,7 +196,7 @@ steps:
   - label: "Benchmarks"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
     env:
       CODESPEED_PROJECT: "$BUILDKITE_PIPELINE_NAME"
       CODESPEED_BRANCH: "$BUILDKITE_BRANCH"
@@ -226,7 +226,7 @@ steps:
   - label: "Documentation"
     plugins:
       - JuliaCI/julia#v1:
-          version: 1.6-nightly
+          version: 1.6
     command: |
       julia --project -e '
         println("--- :julia: Instantiating project")
