--- a/.github/workflows/PreviewPagesCleanup.yml
+++ b/.github/workflows/PreviewPagesCleanup.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
             git config user.name "Documenter.jl"
             git config user.email "documenter@juliadocs.github.io"
-            git rm -rf "previews/PR$PRNUM"
+            git rm -rf --ignore-unmatch "previews/PR$PRNUM"
             git commit -m "delete preview"
             git branch gh-pages-new $(echo "delete history" | git commit-tree HEAD^{tree})
         env:
