--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ GPUCompiler = "0.11.3"
 LLVM = "3"
 MacroTools = "0.5"
 Memoize = "0.4"
+Random123 = "1.2"
 RandomNumbers = "1.4"
 Reexport = "0.2, 1.0"
 Requires = "0.5, 1.0"
