--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -45,6 +45,23 @@ steps:
     if: build.message !~ /\[skip tests\]/
     timeout_in_minutes: 120
 
+  - label: "Julia 1.7"
+    plugins:
+      - JuliaCI/julia#v1:
+          version: nightly
+      - JuliaCI/julia-test#v1: ~
+      - JuliaCI/julia-coverage#v1:
+          codecov: true
+          dirs:
+            - src
+            - lib
+            - examples
+    agents:
+      queue: "juliagpu"
+      cuda: "*"
+    if: build.message !~ /\[skip tests\]/
+    timeout_in_minutes: 120
+
 
     # CUDA versions (from artifacts)
 
