--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ LazyArtifacts = "4af54fe1-eca0-43a8-85a7-787d91b784e3"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
-Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
+Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Random123 = "74087812-796a-5b5d-8853-05524746bad3"
@@ -38,7 +38,7 @@ ExprTools = "0.1"
 GPUArrays = "6.4.0"
 GPUCompiler = "0.11.3"
 LLVM = "3"
-Memoize = "0.4"
+Memoization = "0.1.8"
 Random123 = "1.2"
 RandomNumbers = "1.4"
 Reexport = "0.2, 1.0"
