--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -37,10 +37,9 @@ steps:
             - examples
     agents:
       queue: "juliagpu"
-      cuda: "11.0"
+      cuda: "11.3"                    # compute-sanitizer uses a lot of memory, so we need device_reset!
       cap: "recent"                   # test as much as possible
     env:
-      JULIA_CUDA_MEMORY_POOL: 'none'  # compute-sanitizer uses a lot of memory, so we need device_reset!
       JULIA_CUDA_VERSION: '11.2'      # older versions of CUDA have issues
       JULIA_CUDA_DEBUG_INFO: 'false'  # NVIDIA bug #3305774: ptxas segfaults with out debug info
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
