--- a/.github/workflows/ManifestUpdater.yml
+++ b/.github/workflows/ManifestUpdater.yml
@@ -12,14 +12,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Get Julia compatibility
         id: julia_compat
-        # NOTE: this requires a julia compat lower-bound with minor version!
+        # NOTE: this requires a Julia compat lower-bound with minor version!
         run : |
           version=$(grep '^julia = ' Project.toml | grep -o '".*"' | cut -d '"' -f2)
           echo "::set-output name=version::$version"
       - uses: julia-actions/setup-julia@v1
         with:
-          # version: ${{ steps.julia_compat.outputs.version }}
-          version: "1.6"
+          version: ${{ steps.julia_compat.outputs.version }}
       - name: Update packages
         id: pkg_update
         run: |
