--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -12,17 +12,24 @@ jobs:
       - uses: actions/checkout@v2
       - name: Get Julia compatibility
         id: julia_compat
-        # NOTE: this requires a julia compat lower-bound with minor version!
+        # NOTE: this requires a Julia compat lower-bound with minor version!
         run : |
           version=$(grep '^julia = ' Project.toml | grep -o '".*"' | cut -d '"' -f2)
           echo "::set-output name=version::$version"
       - uses: julia-actions/setup-julia@v1
         with:
-          # version: ${{ steps.julia_compat.outputs.version }}
-          version: "1.6"
-      - name: Pkg.add("CompatHelper")
-        run: julia -e 'using Pkg; Pkg.add("CompatHelper")'
-      - name: CompatHelper.main()
+          version: ${{ steps.julia_compat.outputs.version }}
+      - name: Install CompatHelper
+        run: |
+          import Pkg
+          name = "CompatHelper"
+          version = "2"
+          Pkg.add(; name, version)
+        shell: julia --color=yes {0}
+      - name: Run CompatHelper
+        run: |
+          using CompatHelper
+          CompatHelper.main()
+        shell: julia --color=yes {0}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: julia -e 'using CompatHelper; CompatHelper.main( (; registries) -> CompatHelper._update_manifests(String[pwd()]; registries = registries, delete_old_manifest = false) )'
